--- a/architettura.tex
+++ b/architettura.tex
@@ -105,7 +105,16 @@ assemblate nelle fasi precedenti.
 %% gadget è espressa in questo modo in forma esplicita, e non più
 %% codificata in un algoritmo.
 
-L'architettura di Dropper si compone di tre moduli logici:
+\begin{figure}
+\begin{center}
+\includegraphics{img_architettura}
+\caption{Architettura di Dropper}
+\label{fig:arch}
+\end{center}
+\end{figure}
+
+L'architettura di Dropper si compone di tre moduli logici,
+rappresentati in figura \ref{fig:arch}:
 
 \begin{itemize}
 
