--- a/tesi.tex
+++ b/tesi.tex
@@ -7,8 +7,8 @@
 %\usepackage[signatures]{frontespizio}
 %packages
 \usepackage[utf8x]{inputenc}
-%\usepackage{graphicx}
-
+\usepackage{graphicx}
+\usepackage{svg}
 \usepackage{listings}
 %\usepackage{amsmath}
 %\usepackage{amsfonts}
