--- a/tesi.tex
+++ b/tesi.tex
@@ -10,6 +10,7 @@
 \usepackage{graphicx}
 \usepackage{svg}
 \usepackage{listings}
+\usepackage{hyperref}
 %\usepackage{amsmath}
 %\usepackage{amsfonts}
 \usepackage{fancyhdr}
