--- a/conclusioni.tex
+++ b/conclusioni.tex
@@ -46,7 +46,7 @@ nella quantità di dati da poter iniettare.
 
 Le catene che attualmente dropper riesce a generare ci consentono di
 avere una visione ad un livello di astrazione più alto delle
-operazioni che possiamo eseguire con i singoli gadget. Per generare le
+operazioni che possiamo eseguire con i singoli gadget. Per generare
 catene di queste operazioni, come descritto nei capitoli precedenti,
 si utilizza un approccio per lo più programmatico, usando quando
 possibile algoritmi greedy per la generazione di soluzioni di una
