--- a/tesi.bib
+++ b/tesi.bib
@@ -69,13 +69,20 @@ address = {Berkeley, CA}
 }
 @MISC{sstrip,
     author = {ELF Kickers },
-url={http://www.muppetlabs.com/~breadbox/software/elfkickers.html},
+note={\url{http://www.muppetlabs.com/~breadbox/software/elfkickers.html}},
     year = 1997
 }
 
 @MISC{stackpatch,
     author = {Solar Designer},
-url={http://www.openwall.com/linux},
+note = {\url{http://www.openwall.com/linux}},
+title = {stack-patch},
+year = {1997},
+month = {August},
+}
+                  
+
+
 }
 
 
@@ -122,13 +129,13 @@ url={http://www.openwall.com/linux},
 @misc{c0ntex,
 author= {c0ntex},
 title= {Bypassing non-executable-stack during exploitation using return-to-libc},
-url = {http://www.infosecwriters.com/text_resources/pdf/return-to-libc.pdf},
+note ={\url{http://www.infosecwriters.com/text_resources/pdf/return-to-libc.pdf}},
 year={96},
 }
 
 @misc{exploit-exercise,
 title={exploit-exercise},
-url = {https://exploit-exercises.com/fusion/},
+note = {\url{https://exploit-exercises.com/fusion/}},
 }
 
 @TECHREPORT{Checkoway-10,
@@ -311,6 +318,7 @@ author = {Solar Designer},
 title = {return-to-libc},
 year = {1997},
 month = {August},
+note = {Bugtraq}
 }
 
 
